[package]
name = "cache"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
parking_lot = "0.12"
tokio = { version = "1.22", features = ["full"] }

[dev-dependencies]
uuid = { version = "1.2", features = ["v4"] }
